# python-training

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  Setup.bat  conda-py-3.9-lock.yml  py-3.10.conda-lock.yml  pylintrc  pyproject.toml  setup.bat  setup_no_conda.bat  start_training.bat
assets/: SunCity.tiff  SunCityLocation.csv  mag_dipole_app.py  magnetic_dipole.ui.json  myUI.ui.json  suncity.geoh5
content/: _toc.yml  best_practice.ipynb  best_practice.py  classes.ipynb  classes.py  containers.ipynb  containers.py  core_python.ipynb  core_python.py  functions.ipynb  functions.py  geoh5_api.ipynb  geoh5_api.py  importing_packages.ipynb  intro.md  mag_dipole_app.ipynb  my_file.geoh5  objects.ipynb  objects.py  python_fundamentals.ipynb  uijson_training.ipynb  uijson_training.py
content/fundamentals/: classes.ipynb  classes.py  containers.ipynb  containers.py  functions.ipynb  functions.py  geoh5_api.ipynb  geoh5_api.py  importing_packages.ipynb  importing_packages.py  mag_dipole_app.ipynb  mag_dipole_app.py  python_fundamentals.ipynb  python_fundamentals.py  uijson_training.ipynb  uijson_training.py
devtools/: check-copyright.py  run_conda_lock.py  setup-dev.bat  update_tutorials.py
environments/: conda-py-3.9-linux-64-dev.lock.yml  conda-py-3.9-linux-64.lock.yml  conda-py-3.9-win-64-dev.lock.yml  conda-py-3.9-win-64.lock.yml  py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml
python-training/: mag_dipole.py
scripts/: __init__.py  classes.py  containers.py  functions.py  geoh5_api.py  mag_dipole.py  mag_dipole_app.py  python_fundamentals.py  uijson_training.py
tests/: __init__.py  notebook_test.py
tests/notebooks/: best_practice.py  core_python.py
training/: __init__.py  _config.yml  _toc.yml  best_practice.ipynb  best_practice.py  classes.ipynb  classes.py  containers.ipynb  core_python.ipynb  core_python.py  functions.ipynb  functions.py  geoh5_api.ipynb  importing_packages.ipynb  index.ipynb  intro.md  mag_dipole.ipynb  mag_dipole_app.ipynb  mag_dipole_app_filled.ipynb  objects.ipynb  objects.py  python_fundamentals.ipynb  uijson_training.ipynb
training-assets/: magnetic_dipole.ui.json  myUI.ui.json  s26_e027_1arc_v3.tif  suncity.geoh5
