[tool.poetry]
name = "mira_training"
version = "0.0.1"
description = "Open Source Training"
authors = ["Mira Geoscience <support@mirageoscience.com>"]

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.2.1" # from geoh5py
matplotlib = "^3.5.1"
numpy = "!=1.19.4, ^1.21.5, <1.23"  # scipy 1.7.3 requires numpy <1.23
scipy = "~1.7.3"
git = "^2.34"
jupyter-book = "^0.13"

## pip dependencies
geoh5py = { url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/tags/v0.4.0.tar.gz#sha256=b71aee6fe66787fe65021ebadb224dd2154a975fe352ed1b43e3e31c4808f704" }

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.conda-lock]
platforms = ['win-64', 'linux-64']
channels = ['conda-forge']

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
# defaults are just fine

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
