[tool.poetry]
name = "python-training"
version = "0.1.0"
description = "Open Source Training"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
packages = [
    { include = "scripts"},
]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.2.1" # from geoh5py
matplotlib = "^3.5.1"
numpy = "!=1.19.4, ^1.21.5, <1.23"  # scipy 1.7.3 requires numpy <1.23
jupyter-book = "^0.13"
jupytext = "^1.14"
nbconvert = "^6.4"
pytest = "^7.1"
ipywidgets = {version = "^7.6.5", optional = true}


## pip dependencies
geoh5py = {version = "~0.9.0-alpha.2", source = "pypi", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
readthedocs-sphinx-ext = "*"

[tool.conda-lock]
platforms = ['win-64', 'linux-64']
channels = ['conda-forge']

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
# defaults are just fine

[tool.poetry2conda]
name = "python-training"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
